--- a/sample/BlazorApp.Mac/packages.config
+++ b/sample/BlazorApp.Mac/packages.config
@@ -34,5 +34,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Json" version="4.7.1" targetFramework="xamarinmac20" />
-  <package id="System.Threading.Tasks.Extensions" version="4.6.0-preview.18571.3" targetFramework="xamarinmac20" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="xamarinmac20" />
 </packages>
