--- a/src/WebWindow.Blazor.JS/WebWindow.Blazor.JS.csproj
+++ b/src/WebWindow.Blazor.JS/WebWindow.Blazor.JS.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <DefaultItemExcludes>${DefaultItemExcludes};node_modules\**</DefaultItemExcludes>
+    <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <IsPackable>false</IsPackable>
     
     <!-- VS's FastUpToDateCheck doesn't consider .ts file changes, so it's necessary to disable it to get incremental builds to work correctly (albeit not as fast as if FastUpToDateCheck did work for them) -->
@@ -12,11 +13,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <WebpackInputs Include="**\*.ts" Exclude="node_modules\**" />
+    <Compile Remove="**\*" />
+    <None Remove="**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="**\*.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="upstream\aspnetcore\web.js\package.json" />
+    <Content Include="upstream\aspnetcore\web.js\src\tsconfig.json" />
+    <Content Include="upstream\aspnetcore\web.js\tests\tsconfig.json" />
+    <Content Include="upstream\aspnetcore\web.js\tsconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="dist\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="src\**" />
+    <None Include="upstream\**" Exclude="upstream\aspnetcore\web.js\node_modules\**" />
   </ItemGroup>
 
   <Target Name="EnsureNpmRestored" Condition="!Exists('node_modules')">
