Added zipping of wwwroot in build task and extraction inside android app to circumvent filename restrictions and prevent duplication of source files.

--- a/src/BlazorWebView.Android/BlazorWebView.Android.csproj
+++ b/src/BlazorWebView.Android/BlazorWebView.Android.csproj
@@ -43,6 +43,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
