--- a/sample/BlazorApp.Android/BlazorApp.Android.csproj
+++ b/sample/BlazorApp.Android/BlazorApp.Android.csproj
@@ -66,15 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\css\bootstrap\bootstrap.min.css.map" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\FONT-LICENSE" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\ICON-LICENSE" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\README.md" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\fonts\open-iconic.eot" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\fonts\open-iconic.otf" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\fonts\open-iconic.ttf" />
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\fonts\open-iconic.woff" />
-    <AndroidAsset Include="Assets\wwwroot\sample-data\weather.json" />
+    <AndroidAsset Include="Assets\wwwroot.zip" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
@@ -108,6 +100,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.IO.Compression">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.3" />
@@ -131,21 +126,6 @@
       <Name>BlazorApp</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\index.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\css\site.css" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\css\bootstrap\bootstrap.min.css" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\css\open-iconic-bootstrap.min.css" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\wwwroot\css\open-iconic\font\fonts\open-iconic.svg" />
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
@@ -154,4 +134,7 @@
     <Target Name="AfterBuild">
     </Target>
   -->
+  <Target Name="ZipOutputPath" AfterTargets="BeforeBuild">
+    <ZipDirectory SourceDirectory="..\BlazorApp\wwwroot" DestinationFile="assets\wwwroot.zip" Overwrite="true" />
+  </Target>
 </Project>
