--- a/src/BlazorWebView.Wpf/BlazorWebView.Wpf.csproj
+++ b/src/BlazorWebView.Wpf/BlazorWebView.Wpf.csproj
@@ -28,6 +28,13 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <!--ItemGroup>
     <NativeLibs Include="$(SolutionDir)\src\BlazorWebView.Native\build\**\*.dll" />
     <None Include="@(NativeLibs)">
