--- a/sample/BlazorApp.Mac/packages.config
+++ b/sample/BlazorApp.Mac/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.JSInterop" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Mono.WebAssembly.Interop" version="3.2.0-preview1.20073.1" targetFramework="xamarinmac20" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinmac20" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="xamarinmac20" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="xamarinmac20" />
