--- a/sample/BlazorApp.Wpf/BlazorApp.Wpf.csproj
+++ b/sample/BlazorApp.Wpf/BlazorApp.Wpf.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\BlazorWebView.Wpf\BlazorWebView.Wpf.csproj" />
     <ProjectReference Include="..\..\src\WebWindow.Blazor\WebWindow.Blazor.csproj" />
     <ProjectReference Include="..\BlazorApp\BlazorApp.csproj" />
