--- a/src/BlazorWebView.Mac/packages.config
+++ b/src/BlazorWebView.Mac/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="xamarinmac20" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinmac20" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="xamarinmac20" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="xamarinmac20" />
