--- a/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
+++ b/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
@@ -48,6 +48,11 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers">
+      <Version>1.1.118</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlazorWebView\BlazorWebView.csproj">
