--- a/src/WebWindow.Blazor/WebWindow.Blazor.csproj
+++ b/src/WebWindow.Blazor/WebWindow.Blazor.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <EmbeddedResource Include="../WebWindow.Blazor.JS/dist/blazor.desktop.js" />
   </ItemGroup>
 
