--- a/src/BlazorWebView.Mac/BlazorWebView.Mac.csproj
+++ b/src/BlazorWebView.Mac/BlazorWebView.Mac.csproj
@@ -51,6 +51,9 @@
     <XamMacArch>
     </XamMacArch>
   </PropertyGroup>
+  <PropertyGroup>
+    <DocumentationFile>$(ProjectDir)$(OutDir)$(MSBuildProjectName).xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
