--- a/sample/BlazorApp.Mac/packages.config
+++ b/sample/BlazorApp.Mac/packages.config
@@ -7,7 +7,13 @@
   <package id="Microsoft.AspNetCore.Components.Analyzers" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components.Forms" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components.Web" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Metadata" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.StaticFiles" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
@@ -19,6 +25,7 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.2" targetFramework="xamarinmac20" />
@@ -26,7 +33,9 @@
   <package id="Microsoft.Extensions.Options" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.WebEncoders" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.JSInterop" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Mono.WebAssembly.Interop" version="3.2.0-preview1.20073.1" targetFramework="xamarinmac20" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinmac20" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="xamarinmac20" developmentDependency="true" />
