--- a/src/BlazorWebView.Wpf/BlazorWebView.Wpf.csproj
+++ b/src/BlazorWebView.Wpf/BlazorWebView.Wpf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>library</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <NativeOutputDir>..\BlazorWebView.Native\build\$(Configuration)\</NativeOutputDir>
