--- a/src/WebWindow.Blazor/WebWindow.Blazor.csproj
+++ b/src/WebWindow.Blazor/WebWindow.Blazor.csproj
@@ -7,6 +7,10 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DocumentationFile>$(ProjectDir)$(OutDir)$(MSBuildProjectName).xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="stylecop.json" />
   </ItemGroup>
