--- a/src/BlazorWebView.JS/upstream/aspnetcore/web.js/package.json
+++ b/src/BlazorWebView.JS/upstream/aspnetcore/web.js/package.json
@@ -35,6 +35,7 @@
     "**/set-value": "^2.0.1"
   },
   "dependencies": {
+    "serialize-javascript": "^3.0.0",
     "set-value": "^3.0.1",
     "yarn": "^1.22.1"
   }
