--- a/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
+++ b/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
@@ -67,4 +67,5 @@
     <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <Import Project="../../build.props"/>
 </Project>
