iOs and Mac changes to SDK build style.

--- a/src/BlazorWebView.Mac/BlazorWebView.Mac.csproj
+++ b/src/BlazorWebView.Mac/BlazorWebView.Mac.csproj
@@ -38,6 +38,9 @@
   <PropertyGroup>
     <DocumentationFile>$(ProjectDir)$(OutDir)$(MSBuildProjectName).xml</DocumentationFile>
   </PropertyGroup>
+      <ItemGroup>
+        <Folder Include="Resources" />
+  </ItemGroup>
    <ItemGroup>
     <ProjectReference Include="..\BlazorWebView\BlazorWebView.csproj">
     </ProjectReference>
